@@ -2227,7 +2227,7 @@
             </td>
           </tr>
           <tr>
-            <td>PATH_ABSOLUTE</td>
+            <td>PATH_CONTEXT</td>
             <td>/example.ssi</td>
             <td>reale Pfadangabe der URL bei absoluten Pfaden</td>
           </tr>
