@@ -2162,7 +2162,7 @@
             </td>
           </tr>
           <tr>
-            <td>PATH_ABSOLUTE</td>
+            <td>PATH_CONTEXT</td>
             <td>/example.ssi</td>
             <td>real path specification of the URL for absolute paths</td>
           </tr>
